Unreleased
----------

- Work around recording transaction notes containing unicode.
  https://github.com/Pylons/pyramid_tm/pull/25

0.8 (2014-11-12)
----------------

- Add a new ``tm.activate_hook`` hook which can control when the
  transaction manager is active. For example, this may be useful in
  situations where the manager should be disabled for a particular URL.
  https://github.com/Pylons/pyramid_tm/pull/12

- Fix unit tests under Pyramid 1.5.

- Fix a bug preventing retryable exceptions from actually being retried.
  https://github.com/Pylons/pyramid_tm/pull/8

- Don't call ``setUser`` on transaction if there is no user logged in.
  This could cause the username set on the transaction to be a strange
  string: " None". https://github.com/Pylons/pyramid_tm/pull/9
  
- Avoid crash when the ``path_info`` cannot be decoded from the request
  object. https://github.com/Pylons/pyramid_tm/pull/19

0.7 (2012-12-30)
----------------

- Write unauthenticated userid and ``request.path_info`` as transaction
  metadata via ``t.setUser`` and ``t.note`` respectively during a commit.

0.6 (2012-12-26)
----------------

- Disuse the confusing and bug-ridden generator-plus-context-manager "attempts"
  mechanism from the transaction package for retrying retryable exceptions
  (e.g. ZODB ConflictError).  Use a simple while loop plus a counter and
  imperative logic instead.

0.5 (2012-06-26)
----------------

Bug Fixes
~~~~~~~~~

- When a non-retryable exception was raised as the result of a call to
  ``transaction.manager.commit``, the exception was not reraised properly.
  Symptom: an unrecoverable exception such as ``Unsupported: Storing blobs in
  <somestorage> is not supported.`` would be swallowed inappropriately.

0.4 (2012-03-28)
----------------

Bug Fixes
~~~~~~~~~

- Work around failure to retry ConflictError properly at commit time by the
  ``transaction`` 1.2.0 package.  See
  https://mail.zope.org/pipermail/zodb-dev/2012-March/014603.html for
  details.
